# patrones_diseno_ejercicio_2

.github/workflows/patrones_diseno_ejercicio_2/: CMakeLists.txt
.github/workflows/patrones_diseno_ejercicio_2/include/: expenses.h
.github/workflows/patrones_diseno_ejercicio_2/src/: expenses.cpp  main.cpp
.github/workflows/patrones_diseno_ejercicio_2/tests/: test_expenses.cpp
